crates/loom-cuda-sys/cuda/include/loom_cuda.h

enum LoomCudaStatus {
  LOOM_CUDA_SUCCESS = 0,
  LOOM_CUDA_INVALID_ARGUMENT = 1,
  LOOM_CUDA_UNSUPPORTED = 2,
  LOOM_CUDA_LAUNCH_ERROR = 3,
  LOOM_CUDA_UNAVAILABLE = 4,
};
const char* loom_cuda_status_string(int status);
int loom_cuda_rms_norm_f32(const float* input, const float* weight,
                           float* output, uint32_t rows,
                           uint32_t hidden_size, float epsilon, void* stream);
int loom_cuda_rms_norm_f16(const uint16_t* input, const uint16_t* weight,
                           uint16_t* output, uint32_t rows,
                           uint32_t hidden_size, float epsilon, void* stream);
int loom_cuda_rms_norm_bf16(const uint16_t* input, const uint16_t* weight,
                            uint16_t* output, uint32_t rows,
                            uint32_t hidden_size, float epsilon, void* stream);
int loom_cuda_rms_norm_dynamic_fp8_f32(
    const float* input, const float* weight, float* residual, uint8_t* output,
    float* scales, uint32_t rows, uint32_t hidden_size, float epsilon,
    void* stream);
int loom_cuda_rms_norm_dynamic_fp8_f16(
    const uint16_t* input, const uint16_t* weight, uint16_t* residual,
    uint8_t* output, float* scales, uint32_t rows, uint32_t hidden_size,
    float epsilon, void* stream);
int loom_cuda_rms_norm_dynamic_fp8_bf16(
    const uint16_t* input, const uint16_t* weight, uint16_t* residual,
    uint8_t* output, float* scales, uint32_t rows, uint32_t hidden_size,
    float epsilon, void* stream);
int loom_cuda_rms_norm_dynamic_int8_f32(
    const float* input, const float* weight, float* residual, int8_t* output,
    float* scales, uint32_t rows, uint32_t hidden_size, float epsilon,
    void* stream);
int loom_cuda_rms_norm_dynamic_int8_f16(
    const uint16_t* input, const uint16_t* weight, uint16_t* residual,
    int8_t* output, float* scales, uint32_t rows, uint32_t hidden_size,
    float epsilon, void* stream);
int loom_cuda_rms_norm_dynamic_int8_bf16(
    const uint16_t* input, const uint16_t* weight, uint16_t* residual,
    int8_t* output, float* scales, uint32_t rows, uint32_t hidden_size,
    float epsilon, void* stream);
int loom_cuda_add_rms_norm_f32(float* input, float* residual,
                               const float* weight, uint32_t rows,
                               uint32_t hidden_size, float epsilon,
                               void* stream);
int loom_cuda_add_rms_norm_f16(uint16_t* input, uint16_t* residual,
                               const uint16_t* weight, uint32_t rows,
                               uint32_t hidden_size, float epsilon,
                               void* stream);
int loom_cuda_add_rms_norm_bf16(uint16_t* input, uint16_t* residual,
                                const uint16_t* weight, uint32_t rows,
                                uint32_t hidden_size, float epsilon,
                                void* stream);
int loom_cuda_silu_and_mul_f32(const float* input, float* output,
                               uint32_t rows, uint32_t width, void* stream);
int loom_cuda_silu_and_mul_f16(const uint16_t* input, uint16_t* output,
                               uint32_t rows, uint32_t width, void* stream);
int loom_cuda_silu_and_mul_bf16(const uint16_t* input, uint16_t* output,
                                uint32_t rows, uint32_t width, void* stream);
int loom_cuda_silu_and_mul_dynamic_fp8_f16(
    const uint16_t* input, uint8_t* output, float* scales, uint32_t rows,
    uint32_t width, uint32_t group_size, const float* scale_ub,
    uint32_t scales_transposed, void* stream);
int loom_cuda_silu_and_mul_dynamic_fp8_bf16(
    const uint16_t* input, uint8_t* output, float* scales, uint32_t rows,
    uint32_t width, uint32_t group_size, const float* scale_ub,
    uint32_t scales_transposed, void* stream);
int loom_cuda_silu_and_mul_dynamic_int8_f16(
    const uint16_t* input, int8_t* output, float* scales, uint32_t rows,
    uint32_t width, void* stream);
int loom_cuda_silu_and_mul_dynamic_int8_bf16(
    const uint16_t* input, int8_t* output, float* scales, uint32_t rows,
    uint32_t width, void* stream);
int loom_cuda_moe_permute_workspace_size(uint32_t assignments,
                                         uint32_t num_experts,
                                         uint64_t* workspace_bytes);
int loom_cuda_moe_permute_f32(
    const float* hidden_states, const int32_t* topk_ids,
    const int32_t* expert_map, float* permuted_hidden_states,
    int64_t* expert_offsets, int32_t* inverse_permutation,
    int32_t* permuted_assignment_ids, uint8_t* workspace,
    uint64_t workspace_bytes, uint32_t tokens, uint32_t hidden_size,
    uint32_t top_k, uint32_t num_experts, uint32_t num_local_experts,
    void* stream);
int loom_cuda_moe_permute_f16(
    const uint16_t* hidden_states, const int32_t* topk_ids,
    const int32_t* expert_map, uint16_t* permuted_hidden_states,
    int64_t* expert_offsets, int32_t* inverse_permutation,
    int32_t* permuted_assignment_ids, uint8_t* workspace,
    uint64_t workspace_bytes, uint32_t tokens, uint32_t hidden_size,
    uint32_t top_k, uint32_t num_experts, uint32_t num_local_experts,
    void* stream);
int loom_cuda_moe_permute_bf16(
    const uint16_t* hidden_states, const int32_t* topk_ids,
    const int32_t* expert_map, uint16_t* permuted_hidden_states,
    int64_t* expert_offsets, int32_t* inverse_permutation,
    int32_t* permuted_assignment_ids, uint8_t* workspace,
    uint64_t workspace_bytes, uint32_t tokens, uint32_t hidden_size,
    uint32_t top_k, uint32_t num_experts, uint32_t num_local_experts,
    void* stream);
int loom_cuda_moe_permute_fp8_e4m3fn(
    const uint8_t* hidden_states, const int32_t* topk_ids,
    const int32_t* expert_map, uint8_t* permuted_hidden_states,
    int64_t* expert_offsets, int32_t* inverse_permutation,
    int32_t* permuted_assignment_ids, uint8_t* workspace,
    uint64_t workspace_bytes, uint32_t tokens, uint32_t hidden_size,
    uint32_t top_k, uint32_t num_experts, uint32_t num_local_experts,
    void* stream);
int loom_cuda_moe_combine_f32(
    const float* expert_outputs, const float* routing_weights,
    const int32_t* inverse_permutation, const int64_t* expert_offsets,
    float* output, uint32_t tokens, uint32_t hidden_size, uint32_t top_k,
    uint32_t num_local_experts, void* stream);
int loom_cuda_moe_combine_f16(
    const uint16_t* expert_outputs, const float* routing_weights,
    const int32_t* inverse_permutation, const int64_t* expert_offsets,
    uint16_t* output, uint32_t tokens, uint32_t hidden_size, uint32_t top_k,
    uint32_t num_local_experts, void* stream);
int loom_cuda_moe_combine_bf16(
    const uint16_t* expert_outputs, const float* routing_weights,
    const int32_t* inverse_permutation, const int64_t* expert_offsets,
    uint16_t* output, uint32_t tokens, uint32_t hidden_size, uint32_t top_k,
    uint32_t num_local_experts, void* stream);
int loom_cuda_categorical_sample_f32(
    const float* probabilities, int64_t* rng_state, int64_t* token_ids,
    uint32_t rows, uint32_t vocab_size, void* stream);
int loom_cuda_greedy_sample_logprobs_f32(
    const float* logits, int32_t* token_ids, float* logprobs, int64_t* ranks,
    uint32_t rows, uint32_t vocab_size, uint64_t row_stride, void* stream);
int loom_cuda_greedy_sample_logprobs_f16(
    const uint16_t* logits, int32_t* token_ids, float* logprobs,
    int64_t* ranks, uint32_t rows, uint32_t vocab_size, uint64_t row_stride,
    void* stream);
int loom_cuda_greedy_sample_logprobs_bf16(
    const uint16_t* logits, int32_t* token_ids, float* logprobs,
    int64_t* ranks, uint32_t rows, uint32_t vocab_size, uint64_t row_stride,
    void* stream);
int loom_cuda_selected_token_logprobs_f32(
    const float* logits, const int64_t* token_ids, float* logprobs,
    int64_t* ranks, uint32_t rows, uint32_t vocab_size, uint64_t row_stride,
    void* stream);
int loom_cuda_selected_token_logprobs_f16(
    const uint16_t* logits, const int64_t* token_ids, float* logprobs,
    int64_t* ranks, uint32_t rows, uint32_t vocab_size, uint64_t row_stride,
    void* stream);
int loom_cuda_selected_token_logprobs_bf16(
    const uint16_t* logits, const int64_t* token_ids, float* logprobs,
    int64_t* ranks, uint32_t rows, uint32_t vocab_size, uint64_t row_stride,
    void* stream);
int loom_cuda_topk_sampled_logprobs_f32(
    const float* logits, const int64_t* sampled_token_ids,
    int32_t* output_token_ids, float* output_logprobs,
    int64_t* sampled_token_ranks, uint32_t rows, uint32_t vocab_size,
    uint32_t top_k, uint64_t row_stride, uint8_t* workspace,
    uint64_t workspace_bytes, uint32_t partitions, void* stream);
int loom_cuda_topk_sampled_logprobs_f16(
    const uint16_t* logits, const int64_t* sampled_token_ids,
    int32_t* output_token_ids, float* output_logprobs,
    int64_t* sampled_token_ranks, uint32_t rows, uint32_t vocab_size,
    uint32_t top_k, uint64_t row_stride, uint8_t* workspace,
    uint64_t workspace_bytes, uint32_t partitions, void* stream);
int loom_cuda_topk_sampled_logprobs_bf16(
    const uint16_t* logits, const int64_t* sampled_token_ids,
    int32_t* output_token_ids, float* output_logprobs,
    int64_t* sampled_token_ranks, uint32_t rows, uint32_t vocab_size,
    uint32_t top_k, uint64_t row_stride, uint8_t* workspace,
    uint64_t workspace_bytes, uint32_t partitions, void* stream);