crates/loom-cuda-sys/src/lib.rs

//! Raw bindings to the dependency-light Loom Kernels CUDA C ABI.

use std::ffi::c_int;
#[cfg(feature = "cuda")]
use std::ffi::{c_char, c_void};

pub const LOOM_CUDA_SUCCESS: c_int = 0;
pub const LOOM_CUDA_INVALID_ARGUMENT: c_int = 1;
pub const LOOM_CUDA_UNSUPPORTED: c_int = 2;
pub const LOOM_CUDA_LAUNCH_ERROR: c_int = 3;
pub const LOOM_CUDA_UNAVAILABLE: c_int = 4;

pub const CUDA_MEMCPY_HOST_TO_DEVICE: c_int = 1;
pub const CUDA_MEMCPY_DEVICE_TO_HOST: c_int = 2;
pub const CUDA_STREAM_NON_BLOCKING: u32 = 1;

#[cfg(feature = "cuda")]
unsafe extern "C" {
    pub fn loom_cuda_status_string(status: c_int) -> *const c_char;

    pub fn loom_cuda_rms_norm_f32(
        input: *const f32,
        weight: *const f32,
        output: *mut f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_f16(
        input: *const u16,
        weight: *const u16,
        output: *mut u16,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_bf16(
        input: *const u16,
        weight: *const u16,
        output: *mut u16,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_dynamic_fp8_f32(
        input: *const f32,
        weight: *const f32,
        residual: *mut f32,
        output: *mut u8,
        scales: *mut f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_dynamic_fp8_f16(
        input: *const u16,
        weight: *const u16,
        residual: *mut u16,
        output: *mut u8,
        scales: *mut f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_dynamic_fp8_bf16(
        input: *const u16,
        weight: *const u16,
        residual: *mut u16,
        output: *mut u8,
        scales: *mut f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_dynamic_int8_f32(
        input: *const f32,
        weight: *const f32,
        residual: *mut f32,
        output: *mut i8,
        scales: *mut f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_dynamic_int8_f16(
        input: *const u16,
        weight: *const u16,
        residual: *mut u16,
        output: *mut i8,
        scales: *mut f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_rms_norm_dynamic_int8_bf16(
        input: *const u16,
        weight: *const u16,
        residual: *mut u16,
        output: *mut i8,
        scales: *mut f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_add_rms_norm_f32(
        input: *mut f32,
        residual: *mut f32,
        weight: *const f32,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_add_rms_norm_f16(
        input: *mut u16,
        residual: *mut u16,
        weight: *const u16,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_add_rms_norm_bf16(
        input: *mut u16,
        residual: *mut u16,
        weight: *const u16,
        rows: u32,
        hidden_size: u32,
        epsilon: f32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_silu_and_mul_f32(
        input: *const f32,
        output: *mut f32,
        rows: u32,
        width: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_silu_and_mul_f16(
        input: *const u16,
        output: *mut u16,
        rows: u32,
        width: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_silu_and_mul_bf16(
        input: *const u16,
        output: *mut u16,
        rows: u32,
        width: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_silu_and_mul_dynamic_fp8_f16(
        input: *const u16,
        output: *mut u8,
        scales: *mut f32,
        rows: u32,
        width: u32,
        group_size: u32,
        scale_ub: *const f32,
        scales_transposed: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_silu_and_mul_dynamic_fp8_bf16(
        input: *const u16,
        output: *mut u8,
        scales: *mut f32,
        rows: u32,
        width: u32,
        group_size: u32,
        scale_ub: *const f32,
        scales_transposed: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_silu_and_mul_dynamic_int8_f16(
        input: *const u16,
        output: *mut i8,
        scales: *mut f32,
        rows: u32,
        width: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_silu_and_mul_dynamic_int8_bf16(
        input: *const u16,
        output: *mut i8,
        scales: *mut f32,
        rows: u32,
        width: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_moe_permute_workspace_size(
        assignments: u32,
        num_experts: u32,
        workspace_bytes: *mut u64,
    ) -> c_int;

    pub fn loom_cuda_moe_permute_f32(
        hidden_states: *const f32,
        topk_ids: *const i32,
        expert_map: *const i32,
        permuted_hidden_states: *mut f32,
        expert_offsets: *mut i64,
        inverse_permutation: *mut i32,
        permuted_assignment_ids: *mut i32,
        workspace: *mut u8,
        workspace_bytes: u64,
        tokens: u32,
        hidden_size: u32,
        top_k: u32,
        num_experts: u32,
        num_local_experts: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_moe_permute_f16(
        hidden_states: *const u16,
        topk_ids: *const i32,
        expert_map: *const i32,
        permuted_hidden_states: *mut u16,
        expert_offsets: *mut i64,
        inverse_permutation: *mut i32,
        permuted_assignment_ids: *mut i32,
        workspace: *mut u8,
        workspace_bytes: u64,
        tokens: u32,
        hidden_size: u32,
        top_k: u32,
        num_experts: u32,
        num_local_experts: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_moe_permute_bf16(
        hidden_states: *const u16,
        topk_ids: *const i32,
        expert_map: *const i32,
        permuted_hidden_states: *mut u16,
        expert_offsets: *mut i64,
        inverse_permutation: *mut i32,
        permuted_assignment_ids: *mut i32,
        workspace: *mut u8,
        workspace_bytes: u64,
        tokens: u32,
        hidden_size: u32,
        top_k: u32,
        num_experts: u32,
        num_local_experts: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_moe_permute_fp8_e4m3fn(
        hidden_states: *const u8,
        topk_ids: *const i32,
        expert_map: *const i32,
        permuted_hidden_states: *mut u8,
        expert_offsets: *mut i64,
        inverse_permutation: *mut i32,
        permuted_assignment_ids: *mut i32,
        workspace: *mut u8,
        workspace_bytes: u64,
        tokens: u32,
        hidden_size: u32,
        top_k: u32,
        num_experts: u32,
        num_local_experts: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_moe_combine_f32(
        expert_outputs: *const f32,
        routing_weights: *const f32,
        inverse_permutation: *const i32,
        expert_offsets: *const i64,
        output: *mut f32,
        tokens: u32,
        hidden_size: u32,
        top_k: u32,
        num_local_experts: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_moe_combine_f16(
        expert_outputs: *const u16,
        routing_weights: *const f32,
        inverse_permutation: *const i32,
        expert_offsets: *const i64,
        output: *mut u16,
        tokens: u32,
        hidden_size: u32,
        top_k: u32,
        num_local_experts: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_moe_combine_bf16(
        expert_outputs: *const u16,
        routing_weights: *const f32,
        inverse_permutation: *const i32,
        expert_offsets: *const i64,
        output: *mut u16,
        tokens: u32,
        hidden_size: u32,
        top_k: u32,
        num_local_experts: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_categorical_sample_f32(
        probabilities: *const f32,
        rng_state: *mut i64,
        token_ids: *mut i64,
        rows: u32,
        vocab_size: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_greedy_sample_logprobs_f32(
        logits: *const f32,
        token_ids: *mut i32,
        logprobs: *mut f32,
        ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_greedy_sample_logprobs_f16(
        logits: *const u16,
        token_ids: *mut i32,
        logprobs: *mut f32,
        ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_greedy_sample_logprobs_bf16(
        logits: *const u16,
        token_ids: *mut i32,
        logprobs: *mut f32,
        ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_selected_token_logprobs_f32(
        logits: *const f32,
        token_ids: *const i64,
        logprobs: *mut f32,
        ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_selected_token_logprobs_f16(
        logits: *const u16,
        token_ids: *const i64,
        logprobs: *mut f32,
        ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_selected_token_logprobs_bf16(
        logits: *const u16,
        token_ids: *const i64,
        logprobs: *mut f32,
        ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        row_stride: u64,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_topk_sampled_logprobs_f32(
        logits: *const f32,
        sampled_token_ids: *const i64,
        output_token_ids: *mut i32,
        output_logprobs: *mut f32,
        sampled_token_ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        top_k: u32,
        row_stride: u64,
        workspace: *mut u8,
        workspace_bytes: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_topk_sampled_logprobs_f16(
        logits: *const u16,
        sampled_token_ids: *const i64,
        output_token_ids: *mut i32,
        output_logprobs: *mut f32,
        sampled_token_ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        top_k: u32,
        row_stride: u64,
        workspace: *mut u8,
        workspace_bytes: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;

    pub fn loom_cuda_topk_sampled_logprobs_bf16(
        logits: *const u16,
        sampled_token_ids: *const i64,
        output_token_ids: *mut i32,
        output_logprobs: *mut f32,
        sampled_token_ranks: *mut i64,
        rows: u32,
        vocab_size: u32,
        top_k: u32,
        row_stride: u64,
        workspace: *mut u8,
        workspace_bytes: u64,
        partitions: u32,
        stream: *mut c_void,
    ) -> c_int;
